feat: ui updates for assign to study unit modal and manual questions
